# hailo_video_stram

./: .dockerignore  .env.example  ajax.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: default.yaml
context/: AUDIT_FINDINGS.md  ENV_TEMPLATE.txt  RASPBERRY_PI_RUN.txt  deploy_verify.txt  stream_verify_results.txt  terminal_diagnostics.txt  video_pipeline_notes.txt
docker/: Dockerfile.ai  Dockerfile.web  docker-compose.yml  docker-compose.youtube-dev.yml
docs/: ARCHITECTURE.md  DEPLOYMENT_SMOKE.md  HAILO_LATER.md  PROJECT_STRUCTURE.md  RTSP_PI.md  YOUTUBE_PI_LIMITS.md
nginx/: nginx.conf
raspberry_py_ajax.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: ai_infer_env_hint.sh  ci_check.sh  hailo_reset.sh  smoke_stack.sh  verify_stream_sources.sh  watchdog.sh
services/ai_core/: __init__.py  __main__.py  mjpeg_server.py  playback_spec.py  run_core.py  sensors.py  source_resolve.py  video_ws_server.py
services/ai_core/config/: __init__.py  load.py
services/ai_core/inference/: __init__.py  factory.py  hailo_backend.py  hailo_filter_callbacks.py  hailo_gst_probe.py  hailo_real.py  hailo_stage2_runner.py  (+3 more)
services/persistence/: __init__.py  models.py  recording_store.py  session.py
services/web/: __init__.py  __main__.py  app.py  diagnostics.py  recording_api.py  ws_video_bridge.py
shared/: __init__.py  agent_debug_ndjson.py  errors.py  logging_setup.py  recording_eval.py
shared/schemas/: __init__.py  config.py  detections.py  diagnostics.py  recording.py  telemetry.py
static/: index.html
(+11 files in other folders)
