[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "raspberry-py-ajax"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.5",
  "pydantic-settings>=2.2",
  "pyyaml>=6.0",
  "redis>=5.0",
  "httpx>=0.27",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "numpy>=1.26",
  "aiohttp>=3.9",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
ai = [
  "PyGObject>=3.46; platform_system != 'Windows'",
]

[tool.setuptools.packages.find]
where = ["."]
